--- a/examples/lecture3/hello/templates/hello/greet.html
+++ b/examples/lecture3/hello/templates/hello/greet.html
@@ -4,6 +4,6 @@
         <title>Hello!</title>
     </head>
     <body>
-        Hello, {{ name }}!
+        <h1>Hello, {{ name }}!</h1>
     </body>
 </html>
